--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root">
         <h1>Your code did not Render</h1>
     </div>
-    <script type="module" src="./App.js" ></script>
+    <script type="module" src="./src/App.js" ></script>
 
   </body>
 </html>
